--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-HALO BOS
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Personal Portfolio - ZeroNine</title>
+</head>
+<body>
+
+    <h1>INI ADALAH EPISODE 1</h1>
+    
+</body>
+
+<script src="js/script.js"></script>
+</html>
