--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             <a href="/">ZN</a>
           </div>
 
-<<<<<<< HEAD
           <nav>
             <ul>
               <li><a href="#services">Services</a></li>
@@ -50,7 +49,7 @@
           </div>
 
           <div class="hero-right">
-            <img src="./images/hero.svg" alt="Person Standing" />
+            <img src="./images/new.jpg" alt="Person Standing" />
           </div>
         </section>
       </div>
